patienten- und analysedaten bei neuer analyse löschen
